# SeekurJr

./: README.md  cameraPTZdesenvolvimento.txt  connectSeekur.txt  seekurjr.p  senhaVale.txt
Pacotes/srcITV/BRACO_SCHUNK/goal_publisher/: CMakeLists.txt~
Pacotes/srcITV/BRACO_SCHUNK/schunk_robots/: .rosinstall
Pacotes/srcITV/BRACO_SCHUNK/simple_trajectory/: manifest.xml
Pacotes/srcITV/CAMERA_PTZ/pan_tilt_zoom/: CMakeLists.txt  CMakeLists.txt~
Pacotes/srcITV/CAMERA_STEREO/mobile_ranger/: CMakeLists.txt~  package.xml  package.xml~
Pacotes/srcITV/beginner_tutorials/: CMakeLists.txt  package.xml
Pacotes/srcITV/seekur_jr_robot/seekurjr_gazebo/: CMakeLists.txt
Seekur_16.04/Downloads/: README.md  config-seekurjr.local-20000101004213.xml
Seekur_16.04/Downloads/Arnl/: Arnl-1.9.2prerelease20160613+gcc4.6.tgz  README.md  arnl-base-java_1.9.4+ubuntu16_amd64.deb  arnl-base-python_1.9.4+ubuntu16_amd64.deb  libarnl-java_1.9.4+ubuntu16_amd64.deb  libarnl-python_1.9.4+ubuntu16_amd64.deb  libarnl_1.9.4+ubuntu16_amd64.deb
Seekur_16.04/Drivers_schunk/: README.md
Seekur_16.04/Pacotes/Camera_PTZ/pan_tilt_zoom/: CMakeLists.txt
Seekur_16.04/Pacotes/Camera_PTZ/pan_tilt_zoom/include/: ArCameraMode.h
Seekur_16.04/Pacotes/Camera_PTZ/pan_tilt_zoom/launch/: ptz_control.launch
Seekur_16.04/Pacotes/Camera_PTZ/pan_tilt_zoom/msg/: pan_tilt_goal.msg
Seekur_16.04/Pacotes/Camera_PTZ/pan_tilt_zoom/src/: ArCameraMode.cpp  ptz_commander_node.cpp
Seekur_16.04/Pacotes/PTU/flir_ptu/flir_ptu_description/: CMakeLists.txt
Seekur_16.04/Pacotes/external_ipcam_setup/: CMakeLists.txt  package.xml
Seekur_16.04/Pacotes/external_ipcam_setup/launch/: stream_external_ipcam.launch
Seekur_16.04/Pacotes/fts_lwa/: CMakeLists.txt  package.xml
Seekur_16.04/Pacotes/fts_lwa/include/: FTSLWA.h
Seekur_16.04/Pacotes/fts_lwa/launch/: force_torque_plot.launch
Seekur_16.04/Pacotes/fts_lwa/src/: FTSLWA.cpp  force_sensor.cpp  pcan_compat.cpp
Seekur_16.04/Pacotes/lwa4p_moveit_config/launch/: rviz_remote.launch
Seekur_16.04/Pacotes/p2os/p2os_teleop_falcon/: CMakeLists.txt  package.xml
Seekur_16.04/Pacotes/p2os/p2os_teleop_falcon/src/: p2os_teleop_falcon.cc~  p2os_teleop_falcon2.cc~
Seekur_16.04/Pacotes/p2os/p2os_teleop_phantom/: package.xml~
Seekur_16.04/Pacotes/p2os/pioneer_control/: CMakeLists.txt  CMakeLists.txt~
Seekur_16.04/Pacotes/rosaria/: package.xml
Seekur_16.04/Pacotes/seekur_jr_robot/seekur_jr_moveit/: _setup_assistant
Seekur_16.04/Pacotes/seekur_jr_robot/seekurjr_gazebo/: README.md
Seekur_16.04/Pacotes/sphericalCamera/: CMakeLists.txt  package.xml
Seekur_16.04/Pacotes/sphericalCamera/config/: front_calib_results.txt
Seekur_16.04/Pacotes/sphericalCamera/config/ricoh/: back_calib_results.txt  front_calib_results.txt
Seekur_16.04/Pacotes/sphericalCamera/include/: omni_camera.h  spherical_camera.h
Seekur_16.04/Pacotes/sphericalCamera/launch/: ricoh_capture.launch
Seekur_16.04/Pacotes/sphericalCamera/src/: camera_360.cpp  image_test.cpp  omni_camera.cpp  ricoh_capture.cpp  spherical_camera.cpp  spherical_camera.cpp~
Seekur_16.04/Pacotes/webrtc_teleop/: README.md
Seekur_CDs/CD-Aria/: Autorun.inf
Seekur_CDs/CD-Aria/ARIA/: libaria-java_2.9.0+debian5+gcc4.3_i386.deb  libaria-java_2.9.0+ubuntu12+gcc4.6_i386.deb
Seekur_CDs/CD-Aria/ARNL/: libarnl_1.9.0+ubuntu12+gcc4.6_i386.deb
Seekur_CDs/CD-Aria/MOGS/: MOGS-1.9.0+gcc4.6.tgz  libmogs_1.9.0+ubuntu12+gcc4.6_i386.deb
Seekur_CDs/CD-Aria/MobileSim/: MobileSim-0.7.3+gcc3.4.tgz  MobileSim-0.7.3+gcc4.3.tgz  MobileSim-0.7.3+gcc4.6.tgz  MobileSim-0.7.3+x86_64+gcc4.6.tgz  MobileSim-src-0.7.3.tgz  mobilesim_0.7.3+debian3+gcc3.4_i386.deb  mobilesim_0.7.3+debian5+gcc4.3_i386.deb  mobilesim_0.7.3+ubuntu12+gcc4.6_i386.deb
Seekur_CDs/CD-Aria/MobileSimSource/: MobileSim-src-0.7.3.tgz
Seekur_CDs/CD-Aria/ParamManager/: SeekurParamManager-1.1.tgz
Seekur_CDs/CD-FTS/CPP_SampleCode/: FTLDemo.cpp  RS232CAN.cpp  RS232CAN.h  readme.txt
(+220 files in other folders)
