<?xml version="1.0"?>
<package format="2">
  <name>spherical_camera</name>
  <version>0.0.0</version>
  <description>Spherical Image Projector</description>
  <maintainer email="balbino@dcc.ufmg.br">balbino</maintainer>
  <license>Proprietary</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>genmsg</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>


</package>
